[package]
name = "rejects_macro"
version = "0.1.0"
authors = ["Adam P. Regasz-Rethy <rethy.spud@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rejects = { git = "https://github.com/rrethy/rejects" }
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

[lib]
proc-macro = true
